@@ -4,13 +4,16 @@
 {
   NSTextField *intervalField;
   NSSlider *intervalSlider;
+  NSButton *fetchAtStartupButton;
 
   NSPopUpButton *removeDateButton;
   NSTextField *webBrowserField;
 
   NSUserDefaults *defaults;
+  BOOL anythingChanged;
 }
 
+- (void) fetchAtStartupAction: (id) sender;
 - (void) intervalAction: (id) sender;
 - (void) removeDateAction: (id) sender;
 
