@@ -2,11 +2,32 @@
 #import "Global.h"
 #import "GNUstep.h"
 
+float intervals[11] = {0.5, 1, 2, 3, 4, 6, 8, 12, 16, 24, -1};
+
 @implementation PreferencePane
+
+- (void) fetchAtStartupAction: (id) sender
+{
+  [defaults setBool: [fetchAtStartupButton state] 
+             forKey: RSSReaderFetchAtStartupDefaults];
+}
 
 - (void) intervalAction: (id) sender
 {
-  NSLog(@"%@", sender);
+  int value = [sender intValue];
+  float interval = intervals[value];
+
+  if (interval < 0) {
+    [intervalField setStringValue: @"Never"];
+  } else if (interval < 1) {
+    [intervalField setStringValue: [NSString stringWithFormat: @"%d minutes", (int)(interval*60)]];
+  } else {
+    [intervalField setStringValue: [NSString stringWithFormat: @"%d hours", (int)interval]];
+  }
+
+  /* Do not update user defaults here because it is called frequently.
+   * Do that in -willUnselect */
+  anythingChanged = YES;
 }
 
 - (void) webBrowserAction: (id) sender
@@ -65,6 +86,20 @@
 
 - (void) willSelect
 {
+  /* Set fetch at startup */
+  [fetchAtStartupButton setState: [defaults boolForKey: RSSReaderFetchAtStartupDefaults]];
+  
+  /* Set interval. To ease the potential */
+  float f = [defaults floatForKey: RSSReaderAutomaticRefreshIntervalDefaults];
+  int i;
+  for (i = 0; i < 11; i++) {
+    if (f == intervals[i]) {
+      [intervalSlider setIntValue: i];
+      [self intervalAction: intervalSlider];
+      break;
+    }
+  }
+
   /* Set web browser */
   [webBrowserField setStringValue: [defaults stringForKey: RSSReaderWebBrowserDefaults]];
 
@@ -72,7 +107,7 @@
   int number = [defaults integerForKey: RSSReaderRemoveArticlesAfterDefaults];
   /* Find the item with the right tag */
   BOOL found = NO;
-  int i, count = [removeDateButton numberOfItems];
+  int count = [removeDateButton numberOfItems];
   for (i = 0; i < count; i++) {
     id <NSMenuItem> item = [removeDateButton itemAtIndex: i];
     if ([item tag] == number) {
@@ -88,6 +123,21 @@
     [removeDateButton selectItemAtIndex: 3];
     [self removeDateAction: removeDateButton];
   }
+  anythingChanged = NO;
+}
+
+- (void) willUnselect
+{
+  if (anythingChanged == YES) {
+    int value = [intervalSlider intValue];
+    float interval = intervals[value];
+    [defaults setFloat: interval
+              forKey: RSSReaderAutomaticRefreshIntervalDefaults];
+    [[NSNotificationCenter defaultCenter] 
+      postNotificationName: RSSReaderAutomaticRefreshIntervalChangeNotification
+      object: self];
+  }
+  anythingChanged = NO;
 }
 
 @end
