@@ -5,6 +5,9 @@ Grr Changelog
 Nov-12-2006 Yen-Ju Chen <yjchenx at gmail>
 	* Try to add services back.
 	* Run preferences as modal.
+	* Support fetching at startup and scheduled fetching based on 
+          user defaults (on Cocoa only so far). 
+        * Open main window if dock is clicked.
 
 Nov-11-2006 Yen-Ju Chen <yjchenx at gmail>
 	* Speed up starting by avoid rebuild internal cache frequently.
